# MIPTstudyOOP

./: README.md
1 task/: cat.c  cat.h  dog.c  dog.h  main.c  makefile
2 task/: animal.h  cat.c  cat.h  class_obj.h  dog.c  dog.h  main.c  makefile
2 task (c++)/: CMakeLists.txt  makefile
2 task (c++)/src/: main.cpp
3 task/: animal.c  animal.h  cat.c  cat.h  dog.c  dog.h  main.c
4 task/: cat.h  dog.c  main.c  makefile  method_list.h  obj.c
5 task/: INPUT.txt  MyPython.c  MyPython.h  ast.c  ast.h  main.c  makefile  parser.c  parser.h
Snake/: CMakeLists.txt  README.md
Snake/include/: Model.hpp  Portal.hpp  Rabbit.hpp  Snake.hpp
Snake/include/view/: Controller.hpp  GraphicVisual.hpp  TextVisual.hpp  View.hpp
Snake/src/: Model.cpp  Snake.cpp  main.cpp
Snake/src/view/: Controller.cpp  GraphicVisual.cpp  TextVisual.cpp
