cmake_minimum_required(VERSION 3.16)

project(inheritance LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(inheritance
    src/main.cpp
)

target_include_directories(inheritance PRIVATE include)

# cmake -S . -B build
# cmake --build build 
